fea: create advertisement

--- a/src/index.css
+++ b/src/index.css
@@ -1,2 +1,29 @@
 @import "tailwindcss";
 @plugin "@iconify/tailwind4";
+
+
+
+::-webkit-scrollbar {
+    width: 10px;
+    height: 10px;
+}
+
+::-webkit-scrollbar-corner {
+    border-radius: 1px;
+}
+
+::-webkit-scrollbar-thumb {
+    -webkit-border-radius: 5px;
+    border-radius: 5px;
+    --un-bg-opacity: 1;
+    background-color: rgba(2, 132, 199, var(--un-bg-opacity));
+}
+
+::-webkit-scrollbar-thumb:hover {
+    --un-bg-opacity: 1;
+    background-color: rgba(125, 211, 252, var(--un-bg-opacity));
+}
+
+/* ::-webkit-scrollbar {
+    display: none;
+} */
