--- a/src/index.css
+++ b/src/index.css
@@ -2,6 +2,12 @@
 @plugin "@iconify/tailwind4";
 
 
+/* body {
+    overflow: hidden; 
+    height: 100vh;   
+    margin: 0;      
+} */
+
 
 ::-webkit-scrollbar {
     width: 10px;
